# stride_covid19_v1

./: .gitignore  .travis.yml  CMakeCPP.cmake  CMakeConfig.cmake  CMakeLists.txt  CMakeReport.cmake  DEPENDENCIES.txt  INSTALL.txt  LICENSE.txt  Makefile  README.md
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  Doxyfile.cmake.in  ReferenceManual.html
doc/doxygen/additional_input/: mainpage.doxy  namespaces.doxy
doc/latex/: 01-Introduction.tex  02-Software.tex  03-Simulator.tex  04-Concepts.tex  CMakeLists.txt  Makefile  Refs.bib  UserManual.aux  UserManual.out  UserManual.tex  comp-commands.sty  comp-listing.sty  comp.sty
main/cpp/: CMakeLists.txt
main/cpp/calendar/: Calendar.cpp  Calendar.h
main/cpp/contact/: AgeContactProfile.cpp  AgeContactProfile.h  AgeContactProfiles.h  ContactHandler.h  ContactPool.cpp  ContactPool.h  ContactPoolSys.cpp  ContactPoolSys.h  ContactType.cpp  ContactType.h  EventLogMode.cpp  EventLogMode.h  IdSubscriptArray.h  Infector.cpp  Infector.h  InfectorExec.h  InfectorMap.h  TransmissionProfile.cpp  TransmissionProfile.h
main/cpp/disease/: DiseaseSeeder.cpp  DiseaseSeeder.h  Health.cpp  Health.h  HealthSeeder.cpp  HealthSeeder.h  ImmunitySeeder.cpp  ImmunitySeeder.h  PCRPool.h  PublicHealthAgency.cpp  PublicHealthAgency.h  UniversalTesting.cpp  UniversalTesting.h
main/cpp/execs/: ControlHelper.cpp  ControlHelper.h  SimController.cpp  SimController.h  stride.cpp
main/cpp/pop/: Age.h  Person.cpp  Person.h  PopBuilder.cpp  PopBuilder.h  Population.cpp  Population.h  SurveySeeder.cpp  SurveySeeder.h
main/cpp/sim/: Sim.cpp  Sim.h  SimBuilder.cpp  SimBuilder.h  SimRunner.cpp  SimRunner.h
main/cpp/sim/event/: Id.cpp  Id.h  Subject.cpp  Subject.h
main/cpp/util/: Assert.h  BoxPlotData.h  CSV.cpp  CSV.h  CSVRow.cpp  CSVRow.h  ConfigInfo.cpp  ConfigInfo.h  Containers.h  Exception.h  FileSys.cpp  FileSys.h  LogUtils.cpp  LogUtils.h  PtreeUtils.h  Rn.cpp  Rn.h  RnInfo.h  RnMan.cpp  RnMan.h  RunConfigManager.cpp  RunConfigManager.h  SVIterator.h  SegmentedVector.h  SliceIndexer.h  Stopwatch.h  StringUtils.h  Subject.h  TimeStamp.cpp  TimeStamp.h  TimeToString.cpp  TimeToString.h  is_iterator.h
main/cpp/viewers/: CliViewer.cpp  CliViewer.h  InfectedFile.cpp  InfectedFile.h  InfectedFileViewer.cpp  InfectedFileViewer.h  SummaryFile.cpp  SummaryFile.h  SummaryFileViewer.cpp  SummaryFileViewer.h
main/r/: CMakeLists.txt  Incidence_ensemble.R  Tracing_ensemble.R  rStride_all.R  rStride_bubble_tracing_paper.R  rStride_contacts.R  rStride_create_config.R  rStride_ensemble.R  rStride_explore.R  rStride_gtester_covid19.R  rStride_intervention.R  rStride_intervention_baseline.R  rStride_param.R  rStride_parse_output.R  rStride_pop.R  rStride_r0.R  rStride_universal_testing.R
main/r/rstride/: ContactInspector.R  ContactMatrixFactory.R  HealthAgencyData.R  HealthEconomist.R  IncidenceInspector.R  LogParser.R  Misc.R  ParameterEstimator.R  PrevalenceInspector.R  SummaryInspector.R  SurveyParticipantInspector.R  SymptomaticProfileCreator.R  TracingInspector.R  TransmissionAnalyst.R  TransmissionInspector.R  rStride.R
main/r/rstride/factories/: CalendarFactory.R  CalendarFactory_testing.R  HouseholdClusterFactory.R  ImmunityProfileFactory.R  SymptomaticProfileFactory.R
main/r/rstride/lib/cascsim/: DESCRIPTION  cascsim_common.R
main/r/rstride/lib/npsp/: DESCRIPTION  simage.R  splot.R
main/r/rstride/lib/socrates/: plot_social_contact_matrix.R
main/r/rstride/rmarkdown/: covid19_stride_disease.Rmd
main/resources/: CMakeLists.txt
main/resources/config/: rStride_config_pareto_ensemble.csv  rStride_config_pareto_ensemble_child.csv  run_default.xml
main/resources/data/: calendar_belgium_2020_covid19_april.json  calendar_belgium_2020_covid19_exit_school_adjusted.csv  calendar_belgium_2020_covid19_exit_school_adjusted.json  calendar_belgium_2020_covid19_exit_school_adjusted_universal_immed.json  calendar_belgium_2020_covid19_exit_schoolcategory_adjusted.csv  calendar_belgium_2020_covid19_may_k12school.json  calendar_belgium_2020_covid19_may_k6school.json  calendar_belgium_2020_covid19_may_preschool.json  calendar_belgium_2020_covid19_may_primary_school.json  calendar_belgium_2020_covid19_may_secondary_school.json  contact_matrix_flanders_conditional_teachers.xml  contact_matrix_flanders_conditional_teachers_15min.xml  covid19.csv  covid19_reference_data.csv  covid19_serology_BE_reference.csv  disease_covid19_age.xml  disease_covid19_age_15min.xml  disease_covid19_child.xml  disease_covid19_lognorm.xml  disease_covid19_lognorm_child.xml  disease_influenza.xml  disease_influenza_15touch.xml  disease_measles_adaptive_behavior.xml  disease_measles_adaptive_behavior_15min.xml  holidays_belgium_2019_2021.csv  holidays_flanders_2019.json  holidays_flanders_2020.json  holidays_flanders_2021.json  holidays_none.csv  holidays_none.json  immunity_measles_belgium.xml  prevalence_stochastic_model_20200604.rds  ref_fl2010_regular_weekday_community_gam_mij_rec.csv  ref_fl2010_regular_weekday_gam_mij_rec.csv  ref_fl2010_regular_weekday_household_gam_mij_rec.csv  ref_fl2010_regular_weekday_school_conditional_age23_teachers_gam_mij_rec_median.csv  ref_fl2010_regular_weekday_workplace_conditional_gam_mij_rec_median.csv  ref_fl2010_weekend_community_gam_mij_rec.csv  ref_fl2010_weekend_gam_mij_rec.csv  susceptibility_measles_belgium_2013.csv
main/resources/lib/: CMakeLists.txt
main/resources/lib/domp/include/: omp.h
main/resources/lib/pcg/: README.md
main/resources/lib/randutils/: README.md
main/resources/lib/sha1/: CMakeLists.txt  License-info.txt
main/resources/lib/tclap/: LICENSE_TCLAP.txt
main/resources/lib/trng-4.20/: CMakeLists.txt
main/resources/rstride_test/: regression_rstride_incidence.rds  regression_rstride_prevalence.rds  regression_rstride_summary.rds
test/: CMakeLists.txt
test/cpp/: CMakeLists.txt
test/cpp/gtester/: CMakeLists.txt  ScenarioData.cpp  ScenarioData.h  ScenarioRuns.cpp  main.cpp
test/resources/: CMakeLists.txt
test/resources/lib/: CMakeLists.txt
test/resources/lib/gtest/: CMakeLists.txt  LICENSE_GTEST.txt
(+24 files in other folders)
